--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Aishwarya\AppData\Local\Temp\testng-eclipse--827740405\testng-customsuite.xml</span>
+                    <span>C:\Users\heyra\AppData\Local\Temp\testng-eclipse--1119429407\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -109,17 +109,12 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="loginTest.Login" class="method navigator-link" hash-for-method="login(problem_user, secret_sauce)">login(problem_user, secret_sauce)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="loginTest.Login" class="method navigator-link" hash-for-method="login(locked_out_user, secret_sauce)">login(locked_out_user, secret_sauce)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="loginTest.Login" class="method navigator-link" hash-for-method="login(performance_glitch_user, secret_sauce)">login(performance_glitch_user, secret_sauce)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="loginTest.Login" class="method navigator-link" hash-for-method="login(error_user, secret_sauce)">login(error_user, secret_sauce)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -129,7 +124,12 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="loginTest.Login" class="method navigator-link" hash-for-method="login(error_user, secret_sauce)">login(error_user, secret_sauce)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="loginTest.Login" class="method navigator-link" hash-for-method="login(performance_glitch_user, secret_sauce)">login(performance_glitch_user, secret_sauce)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="loginTest.Login" class="method navigator-link" hash-for-method="login(problem_user, secret_sauce)">login(problem_user, secret_sauce)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -160,14 +160,6 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="login(problem_user, secret_sauce)">
-                  </a> <!-- login(problem_user, secret_sauce) -->
-                  <span class="method-name">login</span>
-                  <span class="parameters">(problem_user, secret_sauce)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="login(locked_out_user, secret_sauce)">
                   </a> <!-- login(locked_out_user, secret_sauce) -->
                   <span class="method-name">login</span>
@@ -176,10 +168,10 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="login(performance_glitch_user, secret_sauce)">
-                  </a> <!-- login(performance_glitch_user, secret_sauce) -->
+                  <a name="login(error_user, secret_sauce)">
+                  </a> <!-- login(error_user, secret_sauce) -->
                   <span class="method-name">login</span>
-                  <span class="parameters">(performance_glitch_user, secret_sauce)</span>
+                  <span class="parameters">(error_user, secret_sauce)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -192,10 +184,18 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="login(error_user, secret_sauce)">
-                  </a> <!-- login(error_user, secret_sauce) -->
+                  <a name="login(performance_glitch_user, secret_sauce)">
+                  </a> <!-- login(performance_glitch_user, secret_sauce) -->
                   <span class="method-name">login</span>
-                  <span class="parameters">(error_user, secret_sauce)</span>
+                  <span class="parameters">(performance_glitch_user, secret_sauce)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="login(problem_user, secret_sauce)">
+                  </a> <!-- login(problem_user, secret_sauce) -->
+                  <span class="method-name">login</span>
+                  <span class="parameters">(problem_user, secret_sauce)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -203,7 +203,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Aishwarya\AppData\Local\Temp\testng-eclipse--827740405\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\heyra\AppData\Local\Temp\testng-eclipse--1119429407\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -256,32 +256,32 @@ data.addRows(6);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'login')
 data.setCell(0, 2, 'loginTest.Login')
-data.setCell(0, 3, 12620);
+data.setCell(0, 3, 12739);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'login')
 data.setCell(1, 2, 'loginTest.Login')
-data.setCell(1, 3, 4021);
+data.setCell(1, 3, 12649);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'login')
 data.setCell(2, 2, 'loginTest.Login')
-data.setCell(2, 3, 3877);
+data.setCell(2, 3, 9150);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'login')
 data.setCell(3, 2, 'loginTest.Login')
-data.setCell(3, 3, 3841);
+data.setCell(3, 3, 9128);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'login')
 data.setCell(4, 2, 'loginTest.Login')
-data.setCell(4, 3, 3819);
+data.setCell(4, 3, 9000);
 data.setCell(5, 0, 5)
 data.setCell(5, 1, 'login')
 data.setCell(5, 2, 'loginTest.Login')
-data.setCell(5, 3, 3603);
+data.setCell(5, 3, 8783);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 31 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -314,23 +314,23 @@ return data;
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">login(locked_out_user, secret_sauce)</span>
-                <span class="method-start">12629 ms</span>
+                <span class="method-start">12753 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">login(problem_user, secret_sauce)</span>
-                <span class="method-start">16235 ms</span>
+                <span class="method-start">25407 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">login(performance_glitch_user, secret_sauce)</span>
-                <span class="method-start">20260 ms</span>
+                <span class="method-start">34193 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">login(error_user, secret_sauce)</span>
-                <span class="method-start">24103 ms</span>
+                <span class="method-start">43199 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">login(visual_user, secret_sauce)</span>
-                <span class="method-start">27983 ms</span>
+                <span class="method-start">52331 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
